Ready for awesome

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "set PORT=5000 && node ./bin/www"
+    "start": "set PORT=5000 && node ./bin/www",
+    "heroku-postbuild": "cd client && npm && npm run build"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
