--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "react-backend",
-  "version": "0.0.0",
+  "description": "a really cool app",
+  "version": "1.0.0",
+  "engines": {
+    "node": "8.11.2"
+  },
   "private": true,
   "scripts": {
     "start": "node index.js",
